GNOME Bugzilla – Bug 736735
waylandsink: do not leak buffer pool in error case
Last modified: 2014-09-17 07:26:33 UTC
Created attachment 286279 [details] [review] waylandsink: do not leak buffer pool in error case buffer pool is leaked in error case
commit 8b0030d044c7e43e7cde3e51f549453158e6841d Author: Ognyan Tonchev <ognyan@axis.com> Date: Tue Sep 16 12:06:35 2014 +0200 waylandsink: do not leak buffer pool in error case https://bugzilla.gnome.org/show_bug.cgi?id=736735