waylandsink: do not leak buffer pool in error case

https://bugzilla.gnome.org/show_bug.cgi?id=736735